--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "daisyui": "latest",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "jotai": "^2.4.2",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.198"
   }
 }
