--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.2.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uiw/codemirror-theme-material": "^4.21.18",
+    "@uiw/react-codemirror": "^4.21.18",
     "autoprefixer": "10.4.15",
     "daisyui": "latest",
     "eslint": "8.49.0",
