--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jotai": "^2.4.2",
     "lodash": "^4.17.21",
     "next": "13.4.19",
+    "pocketbase": "^0.21.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
