--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.21.18",
     "autoprefixer": "10.4.15",
     "beautify": "^0.0.8",
+    "css-to-react-native-transform": "^2.1.0",
     "daisyui": "latest",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
